--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/output.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +15,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-custom-gray-900">
     <app-root></app-root>
   </body>
 </html>
